# scout-alert-bridge

./: .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yaml
bridge/: settings.py  wsgi.py
docs/: schema.md
schema/: event-1.0.json
scout_publisher/: admin.py  apps.py  events.py  filters.py  models.py
scout_publisher/management/commands/: bootstrap_scout_query.py  publish_scout_events.py  scout_stats.py
scout_publisher/migrations/: 0001_initial.py
scout_publisher/tests/: test_events.py  test_schema.py
