[project]
name = "scout-alert-bridge"
version = "0.1.0"
description = "Polls JPL Scout and publishes Rubin ToO candidate NEO events to Kafka (SCiMMA Hopskotch)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Tim Lister", email = "tlister@lco.global" }]
dependencies = [
    "tomtoolkit>=3.0.0",
    # Needs the Scout history + ingest_scout work, unreleased as of tom-jpl 0.2.0.
    # Tracks the head branch of https://github.com/TOMToolkit/tom_jpl/pull/23;
    # switch to "tom-jpl>=0.3.0" once that merges and is released to PyPI.
    "tom-jpl @ git+https://github.com/TOMToolkit/tom_jpl@add-rubin-too-filter-fields",
    "hop-client>=0.9",
    "psycopg[binary]>=3",
]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge", "scout_publisher"]

[tool.hatch.metadata]
# Temporary: the tom-jpl git dependency (PR TOMToolkit/tom_jpl#23); remove with it.
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["*/migrations/*"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
